--- a/src/styles/ConductedBy/index.css
+++ b/src/styles/ConductedBy/index.css
@@ -14,6 +14,13 @@
   width: 90%;
 }
 
+@media screen and (max-width: 1024px) {
+  .body {
+    width: 90%;
+    margin-top: 10rem;
+  }
+}
+
 .Azadi-logo-inner {
   width: 400px;
 }
@@ -29,19 +36,19 @@
   margin-top: 90px;
   width: 500px;
 }
-.spon-logo-inner{
+.spon-logo-inner {
   width: 300px;
   margin-top: 0px;
-  height:80px;
+  height: 80px;
 }
-@media screen and (min-width: 761px){
+@media screen and (min-width: 761px) {
   .axure-logo-inner {
     margin-bottom: 90px;
     width: 500px;
   }
 }
 @media screen and (max-width: 760px) {
-  .other-logos{
+  .other-logos {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -55,7 +62,6 @@
     width: 300px;
   }
   .G20-logo-inner {
-
     margin-left: 2vw;
     width: 200px;
   }
@@ -64,9 +70,9 @@
     width: 200px;
     margin-bottom: 20px;
   }
-  .spon-logo-inner{
+  .spon-logo-inner {
     width: 150px;
     margin-top: 0px;
-    height:95px;
+    height: 95px;
   }
 }
